fix(css): minor updates to spacing

--- a/apps/web/src/components/RecentProjects/index.module.css
+++ b/apps/web/src/components/RecentProjects/index.module.css
@@ -27,7 +27,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  gap: var(--space-6);
+  gap: var(--space-4);
 
   & h4 {
     margin: var(--space-1) 0 var(--space-2);
@@ -36,6 +36,7 @@
   @media (min-width: 768px) {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: var(--space-6);
   }
 }
 
@@ -49,12 +50,17 @@
 }
 
 .repoDescription {
-  margin: 0 0 var(--space-4);
+  margin: 0 0 var(--space-2);
+
+  @media (min-width: 768px) {
+    margin: 0 0 var(--space-4);
+  }
 }
 
 .repoLinks {
   margin: auto 0 0;
   font-size: var(--font-size-xs);
+
   & a {
     text-decoration: none;
     text-transform: uppercase;
