--- a/apps/web/src/theme/global.css
+++ b/apps/web/src/theme/global.css
@@ -30,7 +30,7 @@ body {
 main.index {
   display: flex;
   flex-direction: column;
-  row-gap: 0.5rem;
+  row-gap: 2rem;
 
   @media (min-width: 768px) {
     row-gap: 3rem;
